k8s/backend-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts
  template:
    metadata:
      labels:
        app: carts
    spec:
      containers:
      - name: carts
        image: public.ecr.aws/aws-containers/retail-store-sample-carts:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: carts
