k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/healthcheck-path: "/actuator/health"
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: ui
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: catalog-override
---
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app.kubernetes.io/name: carts
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: checkout
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: orders
