k8s/ui-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/healthcheck-path: "/actuator/health"
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: ui
  type: ClusterIP
